# confidential-dex

./: .gitignore  README.md  cMNTL.json  cSALE.json  cSOL.json  cSample.json  cUSDC.json  cUSDT.json  index.html
confidential-dex-program/: Anchor.toml
confidential-dex-program/programs/confidential-dex-program/: Cargo.toml
confidential-dex-program/programs/confidential-dex-program/src/: lib.rs
confidential-dex-program/tests/: confidential-dex-program.ts
confix/: README.md  angular.json  package.json
confix/src/: index.html  styles.scss
confix/src/app/: app-routing.module.ts  app.component.html  app.component.ts
confix/src/app/components/home/: home.component.html  home.component.scss  home.component.ts
confix/src/app/components/pools/: pools.component.html
confix/src/app/components/swap/: swap.component.ts
confix/src/environments/: environment.prod.ts
dex-backend/: package-lock.json  package.json  tsconfig.json
dex-backend/src/: app.controller.ts  app.module.ts  main.ts
dex-backend/src/idl/: multi_pool_amm.json
dex-backend/src/services/: execute-solana-cli.service.ts  liquidity-pool.service.ts  swap.service.ts  web3-solana.service.ts
shadow-dex/: README.md  angular.json  package-lock.json  package.json
shadow-dex/src/: index.html
shadow-dex/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
shadow-dex/src/app/models/: pool.model.ts
shadow-dex/src/app/services/: swap.service.ts  token.service.ts  wallet.service.ts
shadow-dex/src/environments/: environment.prod.ts  environment.ts
(+9 files in other folders)
